--- a/registration.html
+++ b/registration.html
@@ -34,11 +34,11 @@
   <div class="navbar-style">
     <ul class="navbar-list">
       <li><a href="index.html" class="underline-opening" target="_blank">Welcome</a></li>
-      <li><a href="about1.html" class="underline-opening" target="_blank">About Us</a></li>
-      <li><a href="committee.html" class="underline-opening" target="_blank">Committees</a></li>
+      <li><a href="index.html#aboutus" class="underline-opening" target="_blank">About Us</a></li>
+      <li><a href="index.html#committess" class="underline-opening" target="_blank">Committees</a></li>
       <li><a href="team.html" class="underline-opening" target="_blank">Secretariat</a></li>
       <li><a href="gallery.html" class="underline-opening" target="_blank">Gallery</a></li>
-      <li><a href="index.html" class="underline-opening" target="_parent">Contact Us</a></li>
+
       <li><a href="registration.html" class="contact-style underline-opening" target="_parent">Apply</a></li>
     </ul>
   </div>
