updated the incand logo,landing img,counter

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header style="border:1px solid transparent;
   background-size:cover;
   background-image:
-  url('images/new.jpg');background-repeat:no-repeat;background-color:#212D74;background-position:center;min-height:100vh;width:100%;margin-top: -1px;">
+  url('images/1.jpg');background-repeat:no-repeat;background-color:#212D74;background-position:center;min-height:100vh;width:100%;margin-top: -1px;">
     <nav id="myID">
     <div class="hamburger"> 
       <div class="line1"></div>
@@ -61,13 +61,27 @@
   </div>
 </div>
 </nav>
-<div class="d-flex  justify-content-center " style="background-color:rgb(7, 6, 15);opacity:0.9;height:calc(100vh);text-align:center;background-image:url('images/logo white1.png');background-position:center;background-repeat:no-repeat;background-size:150px;">
+<!-- <div class="d-flex  justify-content-center " style="background-color:rgb(7, 6, 15);opacity:0.9;height:calc(100vh);text-align:center;background-image:url('images/logo white1.png');background-position:center;background-repeat:no-repeat;background-size:150px;">
   
   <div>
       <p  class="edition "style="text-align:center;font-size:40vh;line-height:30vh;color:#861a2d;margin-top:25vh;">2020
         </p>
       <p class="text" id="text"style="text-align: center;font-size:15vh;font-variant:small-caps;line-height:12vh;color:#212f74;"></p>
       <p class="text1" id="text1"style="text-align: center;font-size:15vh;font-variant:small-caps;line-height:12vh;color:#212d74;"></p>
+</div>
+</div>
+</header> -->
+    
+ <div style="background-color:rgb(7, 6, 15);opacity:0.9;height:100vh;text-align:center;background-image:url('images/logo white1.png');background-position:center;background-repeat:no-repeat;background-size:25vh;margin:0;">
+<img src="images/nlogo.png" style="text-align:center;width:150px;height:100px">
+  <h5 style="text-align: center;color: #212D74">Presents</h5>
+<div class="d-flex  justify-content-center" style="min-height:100vh;">
+ <div>
+      <p  class="edition "style="text-align:center;font-size:30vh;line-height:30vh;color:rgba(35, 66, 113, 0.9);opacity:0.92">2020
+        </p>
+      <p class="text" id="text"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:#212f74;"></p>
+      <p class="text1" id="text1"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:#212d74;"></p>
+</div>
 </div>
 </div>
 </header>
@@ -128,12 +142,12 @@ place in February at NIT Silchar campus in 2020.
 <br>
         It is with utmost honour and pride that I,
          Nivedita Singh, Secretary General of NITS MUN 2020, 
-         welcome you to the 8th annual Model United Nations 
+         welcome you to the 7th annual Model United Nations 
          conference at National Institute of Technology,  
          Silchar in February 2020.
         <br>
         NIT Silchar Model United Nations Conference (NITS MUN) 
-         since its inception in 2013 has only grown in its successive 
+         since its inception in 2014 has only grown in its successive 
          editions not just in terms of number of participants but also the scale
          of the conference.   <!--This Year……….(will be added once agenda is finalized.   -->
         <br>
@@ -182,12 +196,12 @@ place in February at NIT Silchar campus in 2020.
   
           It is with utmost honour and pride that I,
            Nivedita Singh, Secretary General of NITS MUN 2020, 
-           welcome you to the 8th annual Model United Nations 
+           welcome you to the 7th annual Model United Nations 
            conference at National Institute of Technology,  
            Silchar in February 2020.
           <br>
           NIT Silchar Model United Nations Conference (NITS MUN) 
-           since its inception in 2013 has only grown in its successive 
+           since its inception in 2014 has only grown in its successive 
            editions not just in terms of number of participants but also the scale
            of the conference.  <!--  This Year……….(will be added once agenda is finalized.   -->
           <br>
@@ -589,7 +603,7 @@ if(window.innerWidth > 768){
   </script>
   <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Feb 14, 2020 24:00:00").getTime();
+var countDownDate = new Date("Feb 13, 2020 24:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
