Final Changes made

--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" type="text/css" href="css/registration.css"> 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+ <!--  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
+ <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <title>NITS MUN</title>
   <style>
     a:hover{
@@ -25,20 +26,20 @@
       <div class="line1"></div>
       <div class="line1"></div>
     </div>
-<div class="container-style">
-  <div class="brand"><img id="image" class="rounded-circle" src="images/logo white1.png" width="80px"></div>
+<div class="container-style" style="height:12vh;">
+  <div class="brand"><img id="image" class="rounded-circle" src="images/logo white1.png" width="90px" style="padding-bottom:12px;margin-left:7%;"></div>
   <div class="tagline">
-    <span class="tagline-style">NITS</span>
-    <span class="tagline-base">Model United Nations</span>
+    <!-- <span class="tagline-style">NITS</span>
+    <span class="tagline-base">Model United Nations</span> -->
   </div>
   <div class="navbar-style">
     <ul class="navbar-list">
       <li><a href="index.html" class="underline-opening" target="_blank">Welcome</a></li>
-      <li><a href="about1.html" class="underline-opening" target="_blank">About Us</a></li>
-      <li><a href="committee.html" class="underline-opening" target="_blank">Committees</a></li>
+      <li><a href="index.html#aboutus" class="underline-opening" target="_blank">About Us</a></li>
+      <li><a href="index.html#committees" class="underline-opening" target="_blank">Committees</a></li>
       <li><a href="team.html" class="underline-opening" target="_blank">Secretariat</a></li>
       <li><a href="gallery.html" class="underline-opening" target="_blank">Gallery</a></li>
-      <li><a href="index.html" class="underline-opening" target="_parent">Contact Us</a></li>
+     <!--  <li><a href="index.html" class="underline-opening" target="_parent">Contact Us</a></li> -->
       <li><a href="registration.html" class="contact-style underline-opening" target="_parent">Apply</a></li>
     </ul>
   </div>
@@ -48,7 +49,7 @@
 
     <h1 style="font-size:4rem;color:#212d74;text-shadow:2px 2px 2px #7890cd">Coming Soon</h1></div>
     
-<div class="row no-gutters" style="min-height:100vh">
+<!-- <div class="row no-gutters" style="min-height:100vh">
     <div class="col-md-4 d-flex justify-content-center align-items-center">
         <div class="delegate">
             <div class="delegate-flip">
@@ -88,11 +89,11 @@
        </div>
 
   </div>
-</div>
+</div> -->
 </header>
-<footer style="background-color: #212d74;padding-left:1rem">
+<footer style="background-color: #343a40;padding-left:1rem">
     <div class="row no-gutters">
-        <div class="col-md-3 quicklinks" style="background-color:#212d74;">
+        <div class="col-md-3 quicklinks" style="background-color:#343a40;">
          <h3 style="padding:2rem 0px 0.5rem 1rem">Quick Links</h3>
          <ul class="quicklinks" style="text-align:justify">
             <li><a href="index.html">Home</a></li>
