--- a/gallery.html
+++ b/gallery.html
@@ -20,11 +20,11 @@
       <div class="line1"></div>
       <div class="line1"></div>
     </div>
-<div class="container-style">
-  <div class="brand"><img id="image" class="rounded-circle" src="images/logo white1.png" width="90px"></div>
+<div class="container-style" style="height:12vh;">
+  <div class="brand"><img id="image" class="rounded-circle" src="images/logo white1.png" width="90px" style="padding-bottom: 12px;margin-left: 7%;"></div>
   <div class="tagline">
-    <span class="tagline-style">NITS</span>
-    <span class="tagline-base">Model United Nations</span>
+    <!-- <span class="tagline-style">NITS</span>
+    <span class="tagline-base">Model United Nations</span> -->
   </div>
   <div class="navbar-style">
     <ul class="navbar-list">
