--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ place in February at NIT Silchar campus in 2020.
  <div class="item">
     <div class="image-item">
       <div style="background-color:#fff">
-        <img src="images/unhrc.png" />
+        <img src="images/unga.png" />
        
       </div>
     </div>
