--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" type="text/css" href="css/landing.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- <!--  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0\css\font-awesome.min.css"> -->
  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="css/styleCard.css"> 
   <title>NITS MUN</title>
@@ -69,8 +68,8 @@
  <div>
       <p  class="edition "style="text-align:center;font-size:30vh;line-height:30vh;color:rgba(35, 66, 113, 0.9);opacity:0.92">2020
         </p>
-      <p class="text" id="text"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:#212f74;"></p>
-      <p class="text1" id="text1"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:#212d74;"></p>
+      <p class="text" id="text"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:rgba(35, 66, 113, 0.9);"></p>
+      <p class="text1" id="text1"style="text-align: center;font-size:12vh;font-variant:small-caps;line-height:10vh;color:rgba(35, 66, 113, 0.9);"></p>
 </div>
 </div>
 </div>
