--- a/registration.html
+++ b/registration.html
@@ -46,50 +46,26 @@
 </div>
 </nav> 
 <div class="d-flex justify-content-center align-items-center" style="display:none; background-color:#fff;min-height:100vh">
-
-    <h1 style="font-size:4rem;color:#212d74;text-shadow:2px 2px 2px #7890cd">Coming Soon</h1></div>
     
-<!-- <div class="row no-gutters" style="min-height:100vh">
+<div class="row no-gutters" style="min-height:100vh">
     <div class="col-md-4 d-flex justify-content-center align-items-center">
-        <div class="delegate">
-            <div class="delegate-flip">
-                <div class="front d-flex justify-content-center align-items-center">
-                   <h2>Delegate</h2>
-                  </div>
-                  <div class="back d-flex justify-content-center align-items-center">
-                    <button class="btn"><a href="register_delegate.html">Delegate</a></button>
-                  </div>
-            </div>
-         </div>
-     
        </div>
   <div class="col-md-4 d-flex justify-content-center align-items-center">
       <div class="delegate">
          <div class="delegate-flip">
              <div class="front d-flex justify-content-center align-items-center">
-                <h2>Executive Board</h2>
+                <h2>Delegate</h2>
                </div>
                <div class="back d-flex justify-content-center align-items-center">
-                 <button class="btn"><a href="register_eb.html">Executive Board</a></button>
+                 <button class="btn"><a href="register_eb.html">Delegate</a></button>
                </div>
          </div>
       </div>
    
      </div>
   <div class="col-md-4 d-flex justify-content-center align-items-center">
-      <div class="delegate">
-          <div class="delegate-flip">
-              <div class="front d-flex justify-content-center align-items-center">
-                 <h2>International Press</h2>
-                </div>
-                <div class="back d-flex justify-content-center align-items-center">
-                  <button class="btn"><a href="register_ip.html">International Press</a></button>
-                </div>
-          </div>
-       </div>
-
   </div>
-</div> -->
+</div>
 </header>
 <footer style="background-color: #343a40;padding-left:1rem">
     <div class="row no-gutters">
