--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
       <div class="preload">
            <img class="rounded-circle logo" src="images/logo white.png" alt="logo" width="550px" height="500px">
 	 </div>
-      <nav>
+<nav>
     <div class="hamburger"> 
       <div class="line1"></div>
       <div class="line1"></div>
@@ -33,7 +33,7 @@
       <li><a href="index.html#committees" class="underline-opening">Committees</a></li>
       <li><a href="team.html" class="underline-opening" target="_blank">Secretariat</a></li>
        <li><a href="gallery.html" class="underline-opening">Gallery</a></li>
-      <li><a href="registration.html" class="contact-style underline-opening" target="_blank">Apply</a></li>
+      <li><a href="registration.html" class="contact-style underline-opening" target="_blank" style="color: #ef6c57">Apply</a></li>
   </div>
 </div>
 </nav>
@@ -167,7 +167,6 @@
     </div>
   </main>
 
-</div>
 <script src="js/preloader.js"></script>
 <script>
   const hamburger = document.querySelector('.hamburger');
