--- a/registration.html
+++ b/registration.html
@@ -80,7 +80,7 @@
     <footer style="background:#343a40;padding-left:1rem">
      <div class="row no-gutters">
       <div class="col-md-4">
-         <div class="brand brand1"><img class="rounded-circle mobile-view" id="image" src="images/logo white1.png" width="150px" height="150px" style="margin-top:15%;align-items:center;"></div>
+          <div class="brand brand1"><img class="rounded-circle mobile-view" id="image" src="images/nitslogo.png" width="150px" height=auto style="margin-top:15%;align-items:center;"></div>
       </div>
        <div class="col-md-4 quicklinks text-view" style="background:#343a40;">
         <h3 style="padding:2rem 0px 0.5rem 1rem">Quick Links</h3>
