--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
         <li><a href="index.html#committees" class="underline-opening">Committees</a></li>
         <li><a href="team.html" class="underline-opening" target="_blank">Secretariat</a></li>
          <li><a href="gallery.html" class="underline-opening" target="_blank">Gallery</a></li>
-        <li><a href="registration.html" class="contact-style underline-opening" target="_blank">Apply</a></li>
+        <li><a href="registration.html" class="contact-style underline-opening" target="_blank" style="color: #ef6c57">Apply</a></li>
       </ul>
     </div>
 </div>
