--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ place in February at NIT Silchar campus in 2020.
  <div class="item">
     <div class="image-item">
       <div style="background-color:#fff">
-        <img src="images/unga.png" />
+        <img src="images/unsc.png" />
        
       </div>
     </div>
