--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         cursor: pointer;
     }
     .btn{
-        background-color: #008fd5;
+        background-color: #39557f;
     }
     #aboutus p
     {
@@ -81,7 +81,7 @@
      
      <span class="text" id="text" style="text-align: center;font-size:8vh;line-height:8vh">NIT SILCHAR<br></span>
       <span class="text" id="text" style="text-align: center;font-size:6vh;line-height:8vh"></span><br>
-      <span class="text1" id="text1"style="text-align: center;font-size:6vh;line-height:8vh"></span>
+      <span class="text1" id="text1"style="text-align: center;font-size:5vh;line-height:8vh"></span>
 </div>
 </div>
 </header>
@@ -332,7 +332,7 @@ place in February at NIT Silchar campus in 2020.
     <div class="details">
       <div style="background-color: #fff;">
           <h3>
-              UNITED NATIONS SECURITY COUNCIL:</h3>
+              UNITED NATIONS SECURITY COUNCIL</h3>
               <h4>Agenda:</h4><h5>To evaluate the threat to international security posed by Turkish Invasion of Syria and to discuss and formulate the working consequence and possible solutions to Turkey's safe zone development plan in Syria</h5>
               <div class="row no-gutters">
                 <div class="col-sm-6 d-flex justify-content-center"><button type="button" style="color:#fff;margin-right:10px"
