Nav bar changes(position fixed, size, etc), user scalability=no to avoid horizontal overflow on mobile

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,8 @@
   <head>
     <title>NITS MUN</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
+
     <link rel="icon" type="image/icon" href="images/logo_white.png">
     <link rel="stylesheet" type="text/css" href="css/preload.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
