--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="Create a digital Story">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/icon" href="images/logo_white.png">
   <link rel="stylesheet" type="text/css" href="css/registration.css"> 
   <link rel="stylesheet" href="css/bootstrap.min.css">
