--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <li><a href="#aboutus" class="underline-opening" >About Us</a></li>
       <li><a href="#committees" class="underline-opening">Committees</a></li>
       <li><a href="#team" class="underline-opening">Secretariat</a></li>
+      <li><a href="new section.html" class="underline-opening">history</a></li>
       <li><a href="gallery.html" class="underline-opening" target="_blank">Gallery</a></li>
       <li><a href="registration.html" class="contact-style underline-opening" target="_blank" style="color: #ef6c57">Apply</a></li>
     </ul>
