Revert "Nav bar changes(position fixed, size, etc), user scalability=no to avoid horizontal overflow on mobile"
This reverts commit d68a116f0c81071912c0e07dc9874b207050ac69.

--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
   <head>
     <title>NITS MUN</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/icon" href="images/logo_white.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
