--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
   <div style="height:100px"></div>
   <div class="container-card">
 
-<h1 class="team_text" style="">Secretariat</h1>
+<h1 class="team_text">Secretariat</h1>
       <div class="card-wrapper">
              <div class="card-team">
                           <img src="./images/1.jpg" alt="card background" class="card-img">
