Added footer to all pages, tried overflow-x hidden

--- a/new section.html
+++ b/new section.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/715c997c20.js" crossorigin="anonymous"></script>
    </head>
   <body>
       <div class="preload">
@@ -178,6 +181,71 @@
                              </div>
                 </div>
 </section>
+<footer class="footer-distributed">
+
+  <div class="footer-left">
+    <div><img class="nitslogofooter" src="images/text_logo_white.png" width="300px" height=auto></div>
+    <p class="footer-links">
+      <a
+        href="index.html">Home</a>
+      ·
+      <a
+        href="#committees">Committees</a>
+      ·
+      <a
+        href="new section.html">History</a>
+      ·
+      <a
+        href="gallery.html">Gallery</a>
+      ·
+      <a
+        href="registration.html" style="color: #ef6c57;">Apply</a>
+    </p> 
+
+    <p class="footer-company-name">NITSMUN © 2021</p>
+  </div>
+
+  <div class="footer-center">
+
+    <div>
+      <i class="fa fa-map-marker"></i>
+      <p><span>NIT Silchar</span> Silchar, Assam</p>
+    </div>
+
+    <div>
+      <i class="fa fa-phone"></i>
+      <p>+91 4353543543</p>
+    </div>
+
+    <div>
+      <i class="fa fa-envelope"></i>
+      <p><a href="mailto:support@company.com" style="color: #fff;">support@nitsmun.com</a></p>
+    </div>
+
+  </div>
+
+  <div class="footer-right">
+
+    <p class="footer-company-about">
+      <span>About NITSMUN</span>
+      Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus
+      vehicula sit amet. Operating since 1892
+    </p>
+
+    <div class="footer-icons">
+
+      <a
+        href="https://www.facebook.com/NITSMUN/?ref=br_rs"><i
+          class="fa fa-facebook"></i></a>
+      <a
+        href="https://www.instagram.com/nitsmun/"><i
+          class="fa fa-instagram"></i></a>
+
+    </div>
+
+  </div>
+
+</footer>
 
 <script src="js/preloader.js"></script>
 <script>
