--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     }
   </style>
   <style>
+    html, body{
+      margin: 0 auto;
+      overflow-x: hidden;
+    }
     @media screen and (max-width:768px) {
       .brand {
         position: relative;
@@ -572,59 +576,6 @@
     </div>
 
   </footer>
-  <!-- ********************* new footer ********************* -->
-
-  <!-- ********************* old footer ********************* -->
-  <!--
-     <footer style="background:#343a40;padding-left:1rem">
-     <div class="row no-gutters">
-      <div class="col-md-4">
-         <div class="brand brand1"><img class="rounded-circle mobile-view" id="image" src="images/nitslogo.png" width="150px" height=auto style="margin-top:15%;align-items:center;margin-left: 10%"></div>
-      </div>
-       <div class="col-md-4 quicklinks text-view" style="background:#343a40;">
-        <h3 style="padding:2rem 0px 0.5rem 1rem">Quick Links</h3>
-        <ul class="quicklinks text-view" style="display: flex;flex-direction: column;">
-           <li><a href="index.html">Home</a></li>
-           <li><a href="#aboutus">About Us</a></li>
-           <li><a href="#committees">Committees</a></li>
-           <li><a href="gallery.html" target="_blank">Gallery</a></li>
-           <li><a href="#team">Secretariat</a></li>
-           <li><a href="registration.html" target="_blank">Apply</a></li>
-         </ul>
-       </div>
-       <div class="col-md-4">
-          <div class="containerS text-view">
-              <div class="wrapper animated bounceInLeft row no-gutters">
-                <div class="company-info col-md-12">
-                    <h3 style="padding-left: 1rem;">Contact Us</h3>
-                    <ul style="color:#fff">
-                      <li><i class="fa fa-road" style="margin-left:1rem;"></i> NIT Silchar</li>
-                      <li style="margin-left:1rem;"> Silchar</li>
-                      <li style="margin-left:1rem;">Assam</li>
-                      <li style="margin-left:1rem;"> 788010</li>
-                      <li><i class="fa fa-phone" style="margin-left:1rem;"></i> 8133840765</li>
-                      <li><i class="fa fa-envelope" style="margin-left:1rem;"></i> nitsmun@gmail.com</li>
-                    </ul>
-                    <div class="social">
-                          <ul class="list-inline d-flex justify-content-center">
-                            <li><a href="https://www.facebook.com/NITSMUN/?ref=br_rs"><i class="fa fa-facebook"></i></a></li>
-                           
-                            <li><a href="https://www.instagram.com/nitsmun/"><i class="fa fa-instagram"></i></a></li>
-                           
-                          </ul>
-                        </div>
-                  </div>
-              </div>
-            </div>
-       </div>
-     </div>
-     <div class="row no-gutters">
-          <img src="images/top_up.png" style="display:none;" class="nav_up" id="nav_up"></div>
-     </div>
-    </footer>
-  -->
-
-
   <!--  -->
   <script src="js/preloader.js"></script>
   <script>
